feat: add backend structure with Firebase integration, JWT authentication, and book review functionality
- Implemented Firebase configuration and service for book reviews
- Added JWT authentication with user registration and login
- Created RESTful APIs for managing books and reviews
- Introduced role-based access control for admin operations
- Seeded initial data from Google Books API and random reviews
- Configured application properties for JWT and Firebase credentials
- Added .gitignore for various build and environment files
- Created package.json for managing frontend and backend scripts

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -31,3 +31,9 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# Firebase
+backend/src/main/resources/firebase/serviceAccountKey.json
+
+# Local env files
+.env
