--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-spring.application.name=backend
+# JWT
+app.jwtSecret=${JWT_SECRET}
+app.jwtExpirationMs=${JWT_EXPIRATION_MS:3600000}
+
+# Firebase
+firebase.credentials.file=${FIREBASE_KEY_PATH:classpath:firebase/serviceAccountKey.json}
+
+# Load environment variables from .env file
+spring.config.import=optional:classpath:.env[.properties]
+
+# Debugging
+logging.level.org.springframework.security=DEBUG
