--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,6 +4,7 @@ app.jwtExpirationMs=${JWT_EXPIRATION_MS:3600000}
 
 # Firebase
 firebase.credentials.file=${FIREBASE_KEY_PATH:classpath:firebase/serviceAccountKey.json}
+firebase.bucket=bookreviewhub-d3201.appspot.com
 
 # Load environment variables from .env file
 spring.config.import=optional:classpath:.env[.properties]
